--- a/app/flex/WeFootball.mxml
+++ b/app/flex/WeFootball.mxml
@@ -3,15 +3,18 @@
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	xmlns:wfom="com.wefootball.components.*"
 	xmlns:accom="com.wefootball.components.account.*"
-	layout="vertical"
 	backgroundGradientColors="[#A1DAED, #ffffff]"
 	horizontalAlign="center"
 	verticalAlign="top"
 	width="100%"
-	height="100%">
+	height="100%"
+	paddingBottom="0"
+	paddingLeft="0"
+	paddingRight="0"
+	paddingTop="0">
 <mx:Script>
 <![CDATA[
-	import com.wefootball.events.AccountCreateEvent;
+	import com.wefootball.events.RegisterEvent;
 	import com.wefootball.events.LoginEvent;
 	
 	private function handleLogin(e:LoginEvent):void {
@@ -23,7 +26,7 @@
 ]]>
 </mx:Script>
 	<mx:ViewStack id="mainStack" width="100%" height="100%">
-		<accom:AccountBox login="showMain()" hideEffect="Fade" />
-		<wfom:MainBox id="mainBox" showEffect="Fade" />
+		<accom:AccountBox login="showMain()" />
+		<wfom:MainBox id="mainBox" />
 	</mx:ViewStack>
 </mx:Application>
