--- a/app/flex/com/wefootball/components/account/UpdateBox.mxml
+++ b/app/flex/com/wefootball/components/account/UpdateBox.mxml
@@ -28,7 +28,7 @@
 			}
 			
  			[Bindable]
-			public var userInfo:User = User.currentUser;
+			public var user:User = User.currentUser;
 			private var _foottoindex:Object = {
 				'L':1, 'R':2, 'B':3
 			}
@@ -39,14 +39,14 @@
 				return (ar.getItemIndex(pos) != -1);
 			}
 			private function refeshBinding():void {
-				var tmp:User = userInfo //refresh binding, do other solutions exist?
-				userInfo = null
-				userInfo = tmp
+				var tmp:User = user //refresh binding, do other solutions exist?
+				user = null
+				user = tmp
 			}
 			
 			private function updateInformation():void {
   				User.update({
-  								id:userInfo.id,
+  								id:user.id,
   								nickname:this.nicknameTI.text,
   								height:this.heightTI.value,
   								weight:this.weightTI.value,
@@ -71,7 +71,7 @@
 			}
 			
 			private function handleSuccess(u:User, event:ResultEvent):void {
-				userInfo = u;
+				user = u;
 			}
 			private function handleUpdateErrors(errors:ServerErrors, event:FaultEvent):void {
 				_serverErrors = errors;
@@ -85,21 +85,21 @@
 	
 	<mx:Form>
 		<mx:FormItem label="昵称" required="true">
-			<mx:TextInput id="nicknameTI" editable="true" text="{userInfo.nickname}"/>
+			<mx:TextInput id="nicknameTI" editable="true" text="{user.nickname}"/>
 		</mx:FormItem>
 		<mx:FormItem label="身高(cm)" >
-			<mx:NumericStepper id="heightTI" value="{userInfo.height}"  maximum="250" />
+			<mx:NumericStepper id="heightTI" value="{user.height}"  maximum="250" />
 		</mx:FormItem>
 		<mx:FormItem label="体重(kg)" >
-			<mx:NumericStepper id="weightTI" value="{userInfo.weight}" maximum="200" />
+			<mx:NumericStepper id="weightTI" value="{user.weight}" maximum="200" />
 		</mx:FormItem>
 	    <mx:FormItem label="生日" >
 	        <mx:DateField id="birthdayTI" yearNavigationEnabled="true" 
-	        	editable="true" selectedDate="{userInfo.birthday}" displayedYear="1980" 
+	        	editable="true" selectedDate="{user.birthday}" displayedYear="1980" 
 	        	monthNames="['1月','2月','3月','4月','5月','6月','7月','8月','9月','10月','11月','12月']" formatString="YYYY-MM-DD" width="115"/>
 	    </mx:FormItem>
 		<mx:FormItem label="惯用脚" >
-			<mx:ComboBox id="fitfootCB" selectedIndex="{foottoindex(userInfo.fitfoot)}">
+			<mx:ComboBox id="fitfootCB" selectedIndex="{foottoindex(user.fitfoot)}">
 				<mx:ArrayCollection>
 					<mx:Object label="" />
 					<mx:Object label="左脚" data="L"/>
@@ -111,30 +111,30 @@
 	    <mx:FormItem label="适合的位置"  >
 	    	<mx:HBox width="100%">
 	    		<mx:Tile id="positionTile" height="100%" >
-	    			<mx:CheckBox label="门将" selected="{checkPosition(userInfo.positions, 'GK')}" name="GK"/>
-	    			<mx:CheckBox label="清道夫" selected="{checkPosition(userInfo.positions, 'SW')}" name="SW"/>
-	    			<mx:CheckBox label="中后卫" selected="{checkPosition(userInfo.positions, 'CB')}" name="CB"/>
-	    			<mx:CheckBox label="左边后卫" selected="{checkPosition(userInfo.positions, 'LB')}" name="LB"/>
-	    			<mx:CheckBox label="右边后卫" selected="{checkPosition(userInfo.positions, 'RB')}" name="RB"/>
-	    			<mx:CheckBox label="后腰" selected="{checkPosition(userInfo.positions, 'DM')}" name="DM"/>
-	    			<mx:CheckBox label="中前卫" selected="{checkPosition(userInfo.positions, 'CM')}" name="CM"/>
-	    			<mx:CheckBox label="左前卫" selected="{checkPosition(userInfo.positions, 'LM')}" name="LM"/>
-	    			<mx:CheckBox label="右前卫" selected="{checkPosition(userInfo.positions, 'RM')}" name="RM"/>
-	    			<mx:CheckBox label="前腰" selected="{checkPosition(userInfo.positions, 'AM')}" name="AM"/>
-	    			<mx:CheckBox label="中锋" selected="{checkPosition(userInfo.positions, 'CF')}" name="CF"/>
-	    			<mx:CheckBox label="前锋" selected="{checkPosition(userInfo.positions, 'SS')}" name="SS"/>
+	    			<mx:CheckBox label="门将" selected="{checkPosition(user.positions, 'GK')}" name="GK"/>
+	    			<mx:CheckBox label="清道夫" selected="{checkPosition(user.positions, 'SW')}" name="SW"/>
+	    			<mx:CheckBox label="中后卫" selected="{checkPosition(user.positions, 'CB')}" name="CB"/>
+	    			<mx:CheckBox label="左边后卫" selected="{checkPosition(user.positions, 'LB')}" name="LB"/>
+	    			<mx:CheckBox label="右边后卫" selected="{checkPosition(user.positions, 'RB')}" name="RB"/>
+	    			<mx:CheckBox label="后腰" selected="{checkPosition(user.positions, 'DM')}" name="DM"/>
+	    			<mx:CheckBox label="中前卫" selected="{checkPosition(user.positions, 'CM')}" name="CM"/>
+	    			<mx:CheckBox label="左前卫" selected="{checkPosition(user.positions, 'LM')}" name="LM"/>
+	    			<mx:CheckBox label="右前卫" selected="{checkPosition(user.positions, 'RM')}" name="RM"/>
+	    			<mx:CheckBox label="前腰" selected="{checkPosition(user.positions, 'AM')}" name="AM"/>
+	    			<mx:CheckBox label="中锋" selected="{checkPosition(user.positions, 'CF')}" name="CF"/>
+	    			<mx:CheckBox label="前锋" selected="{checkPosition(user.positions, 'SS')}" name="SS"/>
 	    		</mx:Tile>
 	    	</mx:HBox>
 	    </mx:FormItem>
 	    <mx:FormItem label="个人简介" >
-	   	   	<mx:TextArea id="summaryTA" text="{userInfo.summary}" width="285" height="100">
+	   	   	<mx:TextArea id="summaryTA" text="{user.summary}" width="285" height="100">
 	   	   	</mx:TextArea>	    
 	    </mx:FormItem>
 	    <mx:FormItem direction="horizontal">
 	    	<mx:Button label="修改" click="updateInformation()" 
 	    		enabled="{validate(nicknameTI.text, summaryTA.text, birthdayTI.selectedDate)}"/>
 	    	<mx:Button label="取消" click="refeshBinding()" />
-	    </mx:FormItem>	    	    	
+	    </mx:FormItem>
 	</mx:Form>
 	<mx:DateValidator id="birthdayValidator" inputFormat="yyyy-mm-dd" source="{birthdayTI}" property="text" required="false"/>
 	<mx:StringValidator id="summaryValidator" source="{nicknameTI}" property="text" maxLength="70" required="true" />
