--- a/app/flex/com/wefootball/components/message/MessageListBox.mxml
+++ b/app/flex/com/wefootball/components/message/MessageListBox.mxml
@@ -1,68 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox xmlns="*" xmlns:mx="http://www.adobe.com/2006/mxml" width="100%"
-	height="100%" label="Messege List" >
+	height="100%" initialize="refresh()">
 
 <mx:Metadata>
-	[Event(name="messageDetail", type="com.wefootball.events.MessageDetailEvent")]
+	[Event(name="messageDisplay", type="com.wefootball.events.MessageDisplayEvent")]
+	[Event(name="userDisplay", type="com.wefootball.events.UserDisplayEvent")]
 </mx:Metadata>
 
 	   <mx:Script>
     	<![CDATA[
-    		import mx.events.FlexEvent;
     		import mx.controls.LinkButton;
-    		import com.wefootball.events.MessageDetailEvent;
+    		import com.wefootball.events.MessageDisplayEvent;
     		import mx.controls.Alert;
     		import mx.rpc.events.ResultEvent;
     		import mx.rpc.events.FaultEvent;
-    		import com.wefootball.events.MessageEvent;
     		import com.wefootball.events.UserDisplayEvent;
     		import com.wefootball.model.User;
     		import com.wefootball.model.Message;
     		import mx.collections.XMLListCollection;
-    		
-    		[Bindable]
-    		public var messageInfo:XML;
+
     		[Bindable]
     		public var messagesReceiveXLC:XMLListCollection;
     		[Bindable]
-    		public var messagesSendXLC:XMLListCollection;
-    	
+    		public var messagesSendXLC:XMLListCollection;    		
     		
-    		internal function readMessageInv(selectedRow:Object):void{
-    		}
-    		
-    		
-    		internal function DeleteMessage(data:Object):void{
-    			Message.destory(data.id,handleMessageDestoryResult,handleMessageDestoryFaultResult); 
+    		internal function deleteMessage(data:Object):void{
+    			Message.destory(data.id,
+    				handleMessageDestoryResult,
+    				handleMessageDestoryFaultResult
+    			); 
     		}
     		private function handleMessageDestoryResult(event:ResultEvent):void{
-     			if (event.result == "error") {
-					Alert.show("The message was not successfully deleted.","Error");
-				} else {
-					Alert.show("Delete successful");
-					listMessages();
-				}
+				refresh();
 			}
 			private function handleMessageDestoryFaultResult(event:FaultEvent):void{
 				Alert.show("Delete failed");
-				listMessages();
 			}
 			
-			internal function receiverRead(data:Object):void{
-				Message.receiverRead(data.id,handleReceiverReadResult,handleReceiverReadFaultResult);
-			}
-			private function handleReceiverReadResult(event:ResultEvent):void{
-     			if (event.result == "error") {
-					Alert.show("The message was not successfully read.","Error");
-				}else{
-					listMessages();
-				}
-			}
-			private function handleReceiverReadFaultResult(event:FaultEvent):void{
-				Alert.show("Read detail failed");
-			} 
-			
-     		public function listMessages():void{	
+     		public function refresh():void{	
      			Message.list(handleMessageListResult,handleMessageFaultListResult); 
      		}
      		public function handleMessageListResult(event:ResultEvent):void{
@@ -72,26 +47,12 @@
   	 			this.messagesSendXLC.source = event.result['as_sender']['message'];
      		} 	
      		public function handleMessageFaultListResult(event:FaultEvent):void{
-     			Alert.show(ResultEvent.RESULT.toString());
+     			Alert.show("GET Messages List failed");
      		} 
      		
-     		internal function messageDetail(data:Object):void{
-     			receiverRead(data);
-     			Message.detail(data.id,handleMessageDetailResult,handleMessageFaultDetailResult);
-     		}	  		
-     		internal function messageSendDetail(data:Object):void{
-     			Message.detail(data.id,handleMessageDetailResult,handleMessageFaultDetailResult);
-     		}
-     		private function handleMessageDetailResult(event:ResultEvent):void{
-  	 			data= event.result;
-  	 			this.messageInfo = XML(data);
-  	 			//Alert.show(data.toString());
-     			dispatchEvent(new MessageDetailEvent());
-     		} 	
-     		private function handleMessageFaultDetailResult(event:FaultEvent):void{
-     			Alert.show("Get detail failed"); 			
-     		} 
-     		
+     		internal function displayMessageDetail(data:Object):void{
+     			dispatchEvent(new MessageDisplayEvent(data.id.toString()));
+     		}	
      		internal function LinkButtonColor(is_receiver_read:String):uint {
      			if(is_receiver_read == "false")
      				return 0xFC0101;
@@ -102,9 +63,7 @@
      		internal function parseDate(d:String):String {
      			return df.format(new Date(d));
      		}
-     		
-     		public function seeOtherUser(user_id:int):void{
-     			//Alert.show(user_id.toString());
+     		public function displayUser(user_id:String):void{
      			dispatchEvent(new UserDisplayEvent(user_id));
      		}
      		
@@ -114,12 +73,12 @@
     <mx:TabNavigator id="tn"  width="100%" height="100%">
     <!-- Define each panel using a VBox container. -->
     <mx:Canvas id= "recieveBox" label="收件箱" >
-		<mx:DataGrid id="receiveDataGrid" initialize="listMessages()" dataProvider="{messagesReceiveXLC}" width="100%" rowCount="10">
+		<mx:DataGrid id="receiveDataGrid" dataProvider="{messagesReceiveXLC}" width="100%" rowCount="10">
 			<mx:columns >
 				<mx:DataGridColumn headerText="发件人" dataField="sender_nick">	
 					<mx:itemRenderer >
 						<mx:Component>
-						<mx:Text text="{data.sender_nick}" click="outerDocument.seeOtherUser(data.sender_id)"
+						<mx:Text text="{data.sender_nick}" click="outerDocument.displayUser(data.sender_id)"
 								 color="{outerDocument.LinkButtonColor(data.is_receiver_read)}"/>
 						</mx:Component>
 					</mx:itemRenderer>		
@@ -127,7 +86,7 @@
 				<mx:DataGridColumn headerText="主题" dataField="subject">
 					<mx:itemRenderer >
 						<mx:Component>
-						<mx:Text text="{data.subject}" click="outerDocument.messageDetail(data)"
+						<mx:Text text="{data.subject}" click="outerDocument.displayMessageDetail(data)"
 								 color="{outerDocument.LinkButtonColor(data.is_receiver_read)}"/>
 						</mx:Component>
 					</mx:itemRenderer>
@@ -142,7 +101,7 @@
 	        	<mx:DataGridColumn headerText="" width="50">
 	        		<mx:itemRenderer>
 	        			<mx:Component>
-	        				<mx:Button label="删除" click="outerDocument.DeleteMessage(data)"/>
+	        				<mx:Button label="删除" click="outerDocument.deleteMessage(data)"/>
 	        			</mx:Component>
 	        		</mx:itemRenderer>
         		</mx:DataGridColumn>        	
@@ -150,12 +109,12 @@
 		</mx:DataGrid>
     </mx:Canvas>
     <mx:Canvas id= "sendBox" label="发件箱">
-		<mx:DataGrid id="sendDataGrid" initialize="listMessages()" dataProvider="{messagesSendXLC}" width="100%" rowCount="10">
+		<mx:DataGrid id="sendDataGrid" dataProvider="{messagesSendXLC}" width="100%" rowCount="10">
 			<mx:columns  >
 				<mx:DataGridColumn headerText="收件人" dataField="receiver_nick">
 					<mx:itemRenderer>
 						<mx:Component>
-							<mx:Text text="{data.receiver_nick}" click="outerDocument.seeOtherUser(data.receiver_id)" 
+							<mx:Text text="{data.receiver_nick}" click="outerDocument.displayUser(data.receiver_id)" 
 								color="0x000000"/>
 						</mx:Component>
 					</mx:itemRenderer>
@@ -163,7 +122,7 @@
 				<mx:DataGridColumn headerText="主题" dataField="subject">
 					<mx:itemRenderer>
 						<mx:Component>
-							<mx:Text text="{data.subject}" click="outerDocument.messageSendDetail(data)" 
+							<mx:Text text="{data.subject}" click="outerDocument.displayMessageDetail(data)" 
 								color="0x000000"/>
 						</mx:Component>
 					</mx:itemRenderer>
@@ -178,7 +137,7 @@
 	        	<mx:DataGridColumn headerText="" width="50">
 	        		<mx:itemRenderer>
 	        			<mx:Component>
-	        				<mx:Button label="删除" click="outerDocument.DeleteMessage(data)" />
+	        				<mx:Button label="删除" click="outerDocument.deleteMessage(data)" />
 	        			</mx:Component>
 	        		</mx:itemRenderer>
         		</mx:DataGridColumn>     
