--- a/app/flex/com/wefootball/components/MainBox.mxml
+++ b/app/flex/com/wefootball/components/MainBox.mxml
@@ -27,12 +27,9 @@
 		messageSendBox.message = m.message;
 	}
 	
-	private function displayMessage(m:MessageDisplayEvent):void {
+	private function displayMessage(m:MessageDetailEvent):void {
 		messageDetailWindow.visible=true;
-		messageDetailBox.messageId = m.message_id;
-	}
-	private function refreshMessageList():void {
-		messageListBox.refresh()
+		messageDetailBox.messageId = m.message.id;
 	}
 	private function displayUser(u:UserDisplayEvent):void {
 		informationBox.visible=true;
@@ -46,7 +43,7 @@
 ]]>
 </mx:Script>
 	<mx:TitleWindow id="settingWindow" title="{User.currentUser.nickname}的设置" visible="false"
-		 showCloseButton="true" close="event.target.visible=false" borderColor="#A1DAED"  borderAlpha="1">
+		 showCloseButton="true" close="event.target.visible=false" borderColor="#A1DAED"  borderAlpha="1" width="414" horizontalCenter="-172" verticalCenter="-85">
 		<acc:UpdateBox id="UpdateBox" user="{User.currentUser}"/>
 	</mx:TitleWindow>
 	
@@ -59,7 +56,7 @@
 	<mx:TitleWindow id="messageSendWindow" title="" visible="false"
 		 showCloseButton="true" close="event.target.visible=false" borderColor="#A1DAED"  borderAlpha="1">
 		<msg:MessageSendBox id="messageSendBox" 
-			messageSendCompleted="messageSendWindow.visible=false;refreshMessageList()"/>
+			messageSendCompleted="messageSendWindow.visible=false;"/>
 	</mx:TitleWindow>
 	
 	<mx:VBox width="100%" height="100%">
